Fix vertical align in safari

--- a/less/bootstrap-theme/panels.less
+++ b/less/bootstrap-theme/panels.less
@@ -325,6 +325,7 @@
             .field-group-btn {
                 display: table-cell;
                 padding: 20px 0;
+                vertical-align: top;
             }
 
             .field-group-addon,
